# pylay

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION_PLAN.md  Makefile  PRD.md  README.md  analysis_report.json  debug_catalog.md  debug_yaml.py  generate_dependency_graph.py  generate_test_docs.py  generate_type_docs.py  generate_yaml_docs.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  test_catalog.md
.claude/commands/pr-review/: review-task-workflow.md
.cursor/commands/: create-pr.md  fix-ci.md  start-issue.md
.cursor/commands/pr-review/: review-task-workflow.md
.cursor/rules/: agents-guidelines.mdc  document-first-approach.mdc  python-type-annotations.mdc
.github/workflows/: ci.yml
converters/: ast_dependency_extractor.py  mypy_type_extractor.py  type_to_yaml.py  yaml_to_type.py
doc_generators/: __init__.py  base.py  config.py  graph_doc_generator.py  markdown_builder.py  test_catalog_generator.py  type_doc_generator.py  type_inspector.py  yaml_doc_generator.py
docs/: PUBLISH.md  README.md  generate_dependency_graph_types.yaml  generate_test_docs_types.yaml  generate_type_docs_types.yaml  infer_deps_types.yaml  refactoring-patterns.md  static-type-index-guide.md  test_forward_ref_types.yaml  test_generic_types_types.yaml  test_sample_types.yaml  type-detection-rules.md  typing-rule.md  ui-guidelines.md
docs/core/: graph_types.md
docs/development/: README.md  ide-settings.md
docs/features/: diagnose-type-ignore.md  quality-check.md  type-analysis-details.md  type-ignore-enhancements.md
docs/guides/: clean-regeneration.md  django-style-structure.md  framework-patterns.md  lay-file-workflow.md  migration-guide.md  orm-integration.md  types-creation-guide.md  yaml-management-guide.md
docs/pylay-types/: generate_yaml_docs_types.yaml  graph_networkx_adapter_types.yaml  main_types.yaml  ref_resolver_types.yaml  test_viz_types.yaml
docs/pylay/schemas/: README.md  pylay_config.lay.yaml  yaml_spec.lay.yaml
docs/pylay/src/: schema.lay.yaml
docs/pylay/src/core/schemas/: graph.lay.yaml  pylay_config.lay.yaml  schema.lay.yaml  yaml_spec.lay.yaml
docs/types/: README.md  containers.md  primitives.md
docs/v1/: type_yaml_mapping.md
docs/yaml_types/: List.md  SampleUser.md  User.md
examples/: sample_module.py  sample_types.yaml
schemas/: type_index.py  yaml_type_spec.py
scripts/: analyze_issues.py  debug_yaml.py  generate_dependency_graph.py  generate_test_docs.py  generate_type_docs.py  generate_yaml_docs.py
scripts/test/: test_forward_ref.py  test_generic_types.py  test_sample.py  test_viz.py
src/: __init__.py  generate_test_docs.py  generate_type_docs.py  generate_yaml_docs.py  infer_deps.py  schema.lay.yaml
src/cli/: analyze_issues.py  main.py
src/cli/commands/: analyze_types.py  check.py  check_quality.py  diagnose_type_ignore.py  docs.py  generate_docs.py  init.py  project_analyze.py  quality.py  review.py  type_to_yaml.py  types.py  yaml.py  yaml_to_type.py
src/converters/: type_to_yaml.py  yaml_to_type.py
src/core/: output_manager.py  project_scanner.py
src/core/analyzer/: __init__.py  abc_base.py  ast_visitors.py  base.py  code_locator.py  dependency_extractor.py  docstring_analyzer.py  exceptions.py  factory_usage_checker.py  graph_processor.py  improvement_templates.py  models.py  protocols.py  quality_checker.py  quality_models.py  quality_reporter.py  schema.lay.yaml  strategies.py  type_classifier.py  type_ignore_analyzer.py  type_ignore_reporter.py  type_inferrer.py  type_level_analyzer.py  type_level_models.py  type_reporter.py  type_statistics.py  type_upgrade_analyzer.py  types.py
src/core/converters/: __init__.py  ast_dependency_extractor.py  clean_regeneration.py  extract_deps.py  infer_types.py  models.py  mypy_type_extractor.py  path_mirror.py  protocols.py  type_to_yaml.py  types.py  yaml_to_type.py
src/core/doc_generators/: __init__.py  config.py  filesystem.py  graph_doc_generator.py  markdown_builder.py  models.py  protocols.py  test_catalog_generator.py  type_doc_generator.py  type_inspector.py  types.py  yaml_doc_generator.py
src/core/review/: __init__.py  protocols.py  types.py
src/core/review/providers/: __init__.py  claudecode.py
src/core/schemas/: analyzer_types.py  graph.py  graph_types.py  pylay_config.py  schema.lay.yaml  type_index.py  types.py  yaml_spec.py  yaml_type_spec.py
src/core/schemas/analyzer/: __init__.py  models.py
src/core/schemas/graph/: __init__.py  models.py  types.py
src/core/schemas/yaml_spec/: __init__.py  models.py
src/core/utils/: io_helpers.py  type_parsing.py
src/doc_generators/: config.py  filesystem.py  type_doc_generator.py  type_inspector.py  yaml_doc_generator.py
src/schemas/: graph_types.py  yaml_type_spec.py
src/tui/: main.py
tests/: __init__.py  test_analyze_types_details.py  test_analyzer.py  test_clean_regeneration.py  test_cli.py  test_cli_quality.py  test_cli_single_file.py  test_code_locator.py  test_confidence_computation.py  test_config_integrity.py  test_dependency_extraction.py  test_factory_usage_checker.py  test_forward_ref.py  test_generate_test_docs.py  test_generate_type_docs.py  test_generation_header.py  test_generic_types.py  test_graph_types.py  test_init_command.py  test_integration_doc_generators.py  test_issues_analyzer.py  test_lay_file_generation.py  test_migrations.py  test_mypy_networkx_integration.py  test_newtype_edge_cases.py  test_newtype_pattern_detection.py  test_output_manager.py  test_path_mirror.py  test_project_analyze.py  test_quality_checker.py  test_quality_reporter.py  test_refactored_generate_test_docs.py  test_refactored_generate_type_docs.py  test_type_inference.py  test_type_management.py  test_type_newtype_dataclass_yaml.py  test_utils_ref_resolver.py  test_visualization.py  test_yaml_command_integration.py  test_yaml_converters.py
tests/fixtures/: dataclass.py  empty.py  invalid.py  mixed_types.py  newtype.py  type_alias.py
typings/pydot/: __init__.pyi
utils/: graph_networkx_adapter.py  ref_resolver.py
