[project]
name = "pylay"
version = "0.1.0"
description = "Python の type hint と docstrings を利用した types <-> docs 間の透過的なジェネレータ"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.5",
    "pydantic>=2.8.2",
    "pydot>=4.0.1",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250915",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.0",
    "radon>=6.0.1",
    "interrogate>=1.7.0",
    "safety>=3.2.3",
    "mypy>=1.18.2",
    "pre-commit>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "networkx>=3.3",
    "pydot>=3.0.0",
]

[tool.poetry]
name = "pylay"
version = "0.1.0"
description = "Python の type hint と docstrings を利用した types <-> docs 間の透過的なジェネレータ"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "converters"},
    {include = "schemas"},
    {include = "doc_generators"},
    {include = "generate_*.py"},
]

[tool.poetry.dependencies]
python = ">=3.13"
pydantic = ">=2.8.2"
pyyaml = ">=6.0.2"
ruamel-yaml = ">=0.18.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.3"
ruff = ">=0.6.0"
radon = ">=6.0.1"
interrogate = ">=1.7.0"
safety = ">=3.2.3"
mypy = ">=1.18.2"
pre-commit = ">=3.0.0"
pytest-cov = ">=4.0.0"
pytest-xdist = ">=3.0.0"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Python 3.13+ の新しい型構文を有効化
select = [
    "UP007",  # Use X | Y for type unions (Python 3.13+)
    "UP006",  # Use PEP 585 imports (Python 3.9+)
    "UP035",  # Use PEP 585 generic types (Python 3.9+)
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# uv 用の設定
[tool.uv]
dev-dependencies = [
    "mypy>=1.18.2",
    "pytest>=8.3.3",
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "radon>=6.0.1",
    "interrogate>=1.7.0",
    "safety>=3.2.3",
]

[tool.uv.sources]
# ローカル開発用
# pylay = { path = ".", editable = true }
